--- a/learner.ipynb
+++ b/learner.ipynb
@@ -39,7 +39,8 @@
    "source": [
     "from qlearning import QLearner\n",
     "from grid_world import GridWorld\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as nd"
    ]
   },
   {
@@ -57,9 +58,9 @@
     "        0,0,0,0,0]\n",
     "\n",
     "    rewards = dict()\n",
-    "    rewards[24] = 100\n",
-    "    rewards[4] = -50\n",
-    "    rewards[19] = -20\n",
+    "    rewards[24] = nd.array([100])\n",
+    "    rewards[4] = nd.array([-50])\n",
+    "    rewards[19] = nd.array([-20])\n",
     "\n",
     "    grid_world = GridWorld(board, rewards, 6, 24, 5, 5)\n",
     "    return grid_world"
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +86,7 @@
     "            action = learner.act(world.actor_pos)\n",
     "            actions.append(action)\n",
     "            value, end = world.act(action)\n",
-    "            totalValue += value\n",
+    "            totalValue += value[0]\n",
     "            learner.reward(value, world.actor_pos)\n",
     "\n",
     "        learner.end_episode()\n",
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,9 +110,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array: array is 0-dimensional, but 1 were indexed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/ludviglundberg/dev/projects/qlearning/learner.ipynb Cell 8'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ludviglundberg/dev/projects/qlearning/learner.ipynb#ch0000007?line=0'>1</a>\u001b[0m q1, q1_episodes \u001b[39m=\u001b[39m qlearner()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ludviglundberg/dev/projects/qlearning/learner.ipynb#ch0000007?line=1'>2</a>\u001b[0m q1_df \u001b[39m=\u001b[39m episodes_to_df(q1_episodes)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ludviglundberg/dev/projects/qlearning/learner.ipynb#ch0000007?line=3'>4</a>\u001b[0m q2, q2_episodes \u001b[39m=\u001b[39m qlearner(learning_rate\u001b[39m=\u001b[39m\u001b[39m0.5\u001b[39m, explore_rate\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m)\n",
+      "\u001b[1;32m/Users/ludviglundberg/dev/projects/qlearning/learner.ipynb Cell 6'\u001b[0m in \u001b[0;36mqlearner\u001b[0;34m(learning_rate, discount_factor, explore_rate)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ludviglundberg/dev/projects/qlearning/learner.ipynb#ch0000005?line=12'>13</a>\u001b[0m     actions\u001b[39m.\u001b[39mappend(action)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ludviglundberg/dev/projects/qlearning/learner.ipynb#ch0000005?line=13'>14</a>\u001b[0m     value, end \u001b[39m=\u001b[39m world\u001b[39m.\u001b[39mact(action)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/ludviglundberg/dev/projects/qlearning/learner.ipynb#ch0000005?line=14'>15</a>\u001b[0m     totalValue \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m value[\u001b[39m0\u001b[39;49m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ludviglundberg/dev/projects/qlearning/learner.ipynb#ch0000005?line=15'>16</a>\u001b[0m     learner\u001b[39m.\u001b[39mreward(value, world\u001b[39m.\u001b[39mactor_pos)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ludviglundberg/dev/projects/qlearning/learner.ipynb#ch0000005?line=17'>18</a>\u001b[0m learner\u001b[39m.\u001b[39mend_episode()\n",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for array: array is 0-dimensional, but 1 were indexed"
+     ]
+    }
+   ],
    "source": [
     "q1, q1_episodes = qlearner()\n",
     "q1_df = episodes_to_df(q1_episodes)\n",
@@ -125,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
